added a logo on front page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Guessing Game</title>
 </head>
 <body>
+    
     <div class="container">
+        <img src="resource/logo.jpg" alt="logo">
         <h1>Guessing Games</h1>
         <p>Choose a Game Mode :</p>
         <button onclick="game1()">Guess Number Mode</button>
