nothingjust small changes

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
         <div class="mainlogo"></div>
         <button>Home</button>
         <div class="github-button">
-            <a href="https://github.com/bnslboy/Guess-Website" target="_blank"><button>github</button></a>
+            <a href="https://github.com/aditya-bansal-7/Guess-Website" target="_blank"><button>github</button></a>
             
         </div>
-        <h2>Guessing Game</h2>
+        <h2 id="name">Guessing Game</h2>
         <div class="mainlogo"></div>
         <button>Help</button>
         <div class="github-button">
-            <button>contact</button>
+            <a href="https://t.me/bnsl_boy" target="_blank"><button>contact</button></a>
         </div>`
-        
     </div>
 
     <main>
@@ -41,6 +40,9 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>This website is only for fun purpose !!!</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
