update web view

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button>Help</button>
         <div class="github-button">
             <a href="https://t.me/bnsl_boy" target="_blank"><button>contact</button></a>
-        </div>`
+        </div>
     </div>
 
     <main>
@@ -40,9 +40,6 @@
             </div>
         </div>
     </main>
-    <footer>
-        <p>This website is only for fun purpose !!!</p>
-    </footer>
     <script src="script.js"></script>
 </body>
 </html>
