ATM pin update #2

--- a/game2/game.html
+++ b/game2/game.html
@@ -33,7 +33,7 @@
             <p id="message"></p>
             <p>Attempts: <span id="attempts">0</span></p>
             <p>Score: <span id="score">0</span></p>
-            <p>PIN : <span id="pin">0</span></p>
+            <!-- <p>PIN : <span id="pin">0</span></p> -->
 
             <button onclick="main_menu()" id="back_button">Back</button>
         </div>
