fix-guess-button

--- a/game2/game.html
+++ b/game2/game.html
@@ -29,7 +29,7 @@
             <input type="number" id="pinInput3" min="0" max="9">
             <input type="number" id="pinInput4" min="0" max="9">
             <h6></h6>
-            <button onclick="checkPIN()">Submit Guess</button>
+            <button onclick="checkGuess()">Submit Guess</button>
             <p id="message"></p>
             <p>Attempts: <span id="attempts">0</span></p>
             <p>Score: <span id="score">0</span></p>
@@ -59,7 +59,7 @@
             Try to enter 3245 <br>
             Getting an answer <br><input type="number" value="3" class="greenz"> <input type="number" class="greenz" value="2"> <input type="number" class="greenz" value="4"> <input type="number" value="5"><br><br>
             The first three digits we guessed, it remains to determine the last digit.</p>
-        <button onclick="hideHelp()">Back</button>
+        <button onclick="hideHelp()">Close</button>
     </div>
     <script src="script.js"></script>
 </body>
